syntax = "proto3";
package proto;

option go_package = "./";

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string reply = 1;
}